--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+      body {
+        text-align: center;
+        color: white;
+        background: #001122;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>waaiting...</h1>
+    <h2>for the modddddssss</h2>
+    <h3>to appprrroooooooovee</h3>
+    <h4>my site.......</h4>
+  </body>
+</html>
